[metadata]
name = literal_copy
description = LiteralCopy helps to debug code by creating the syntax for any object to reproduce it
author = Cornelius Emde
license = GNU
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    literal_copy
install_requires =
    numpy>=1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160